add editing function

--- a/templates/add.html
+++ b/templates/add.html
@@ -22,7 +22,7 @@
       <!-- This is where your WTForm will go -->
       {{ wtf.quick_form(form, novalidate=True) }}
 
-      <p class="space-above"><a href="{{ url_for('pdtable') }}">Go back to list</a></p>
+      <p class="space-above"><a href="{{ url_for('pdtable') }}">Back to list</a></p>
 
     </div>
   </div>
