--- a/templates/error.html
+++ b/templates/error.html
@@ -18,10 +18,9 @@
   <div class="row">
     <div class="col-sm-12 col-md-8">
 
-      <h1>Edit/Update the asset information</h1>
-      {{ wtf.quick_form(form, novalidate=True) }}
-      
-  <p class="space-above"><a href="{{ url_for('showlist') }}">Back to list</a></p>
+      <h1>Please Check userID</h1>
+
+      <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
 
     </div>
   </div>
