--- a/templates/pdtable.html
+++ b/templates/pdtable.html
@@ -26,7 +26,7 @@
             </table>
         </div>
         <p class="space-above">
-            <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return main page</a>
+            <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
             <a class="btn btn-warning btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
             <!-- <a class="btn btn-warning btn-lg" href="{{ url_for('edit_info') }}" role="button">Edit/Update</a> -->
         </p>
