--- a/templates/pdtable.html
+++ b/templates/pdtable.html
@@ -27,7 +27,7 @@
         </div>
         <p class="space-above">
             <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-            <a class="btn btn-warning btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
+            <a class="btn btn-warning btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download(Raw)</a>
         </p>
         </div>
     </div>
