--- a/templates/assets.html
+++ b/templates/assets.html
@@ -29,7 +29,7 @@
             {% for row in assets %}
           <tr>
                 <td>
-                  <a href="{{ url_for('edit_info', code=row[0]) }}">Edit</a>
+                  <a class="btn btn-info btn-sm" href="{{ url_for('edit_info', code=row[0]) }}">Edit</a>
                 </td>
               {% for item in row %}
                 <td>{{ item }}</td>
@@ -40,9 +40,10 @@
       </div>
       <p class="space-above">
         <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-        <a class="btn btn-warning btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
+        <a class="btn btn-warning btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
+        <a class="btn btn-warning btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
       </p>
-     </div>
+      </div>
   </div>
 </div>
 
