--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,8 @@
   <h1 class="display-4"> 
           🖥 IT Inventory 💻
         </h1>
-  <p class="lead">Company IT devices</p>
+  <!-- <p class="lead">Company IT devices</p> -->
+  <p class="lead"></p>
   <hr class="my-4">
   <p>Keep tracking all company's IT assets.</p>
   <a class="btn btn-warning btn-lg" href="{{ url_for('showlist') }}" role="button">Asset List_v1</a>
