--- a/templates/pdtable.html
+++ b/templates/pdtable.html
@@ -1,6 +1,6 @@
 
-{% extends 'bootstrap/base.html' %}
-{% block title %}IT Assets{% endblock %}
+<!-- {% extends 'bootstrap/base.html' %} -->
+{% block title %}IT Assets pandas table{% endblock %}
 
 {% block styles %}
 
