--- a/templates/add.html
+++ b/templates/add.html
@@ -1,12 +1,12 @@
+<!-- {% extends 'bootstrap/base.html' %} -->
 
-{% extends 'bootstrap/base.html' %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Add A New Device{% endblock %}
 
 {% block styles %}
 
-{{super()}}
+<!-- {{super()}} -->
 
 <link rel="stylesheet"
       href="{{url_for('.static', filename='css/styles.css')}}">
@@ -18,12 +18,14 @@
   <div class="row">
     <div class="col-sm-12 col-md-8">
 
-      <h1>Add new asset into the database</h1>
+      <h3>Add new asset into the database</h3>
       <!-- This is where your WTForm will go -->
       {{ wtf.quick_form(form, novalidate=True) }}
 
-      <p class="space-above"><a href="{{ url_for('showlist') }}">Back to list</a></p>
-
+      <p class="space-above">
+        <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+      </p>
+    
     </div>
   </div>
 </div>
