--- a/templates/rawedit.html
+++ b/templates/rawedit.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'bootstrap/base.html' %} -->
+{% extends 'bootstrap/base.html' %}
 
 {% block title %}IT Assets{% endblock %}
 
@@ -17,11 +17,12 @@
 <div class="container">
   <div class="row">
     <div class= "col-lg">
-      <h3>IT Inventory(Valid Items)</h3>
-      <div class="table-responsive">         
+      <h3>All Inventory Records</h3>
+      <div class="table-responsive">          
         <table class="mystyle table table-condensed">
           <tr>
             <th>Edit</th>
+            <th>Delete</th>
             {% for item in col %}
             <th>{{item}}</th>
             {% endfor %}
@@ -31,6 +32,9 @@
                 <td>
                   <a class="btn btn-info btn-sm" href="{{ url_for('edit_info', code=row[0]) }}">Edit</a>
                 </td>
+                <td>
+                  <a class="btn btn-danger btn-sm" href="{{ url_for('delete_item', code=row[0]) }}">Del</a>
+                </td>
               {% for item in row %}
                 <td>{{ item }}</td>
               {% endfor %}
@@ -39,10 +43,9 @@
         </table>
       </div>
       <p class="space-above">
-        <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+        <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('raw_edit') }}" role="button">Show Raw data</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
+        <a class="btn btn-link btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
       </p>
       </div>
   </div>
