--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -63,3 +63,18 @@ a {
   background: rgb(63, 190, 220);
   cursor: pointer;
 }
+
+input[type=button], input[type=submit], input[type=reset] {
+  background-color: rgb(63, 190, 220);
+  border: 1px solid;
+  color: white;
+  padding: 10px 10px;
+  text-decoration: none;
+  margin: 2px 2px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background: rgb(40, 113, 215);
+  cursor: pointer;
+}
