--- a/templates/checkbox.html
+++ b/templates/checkbox.html
@@ -13,15 +13,16 @@
 
 
 {% block content %}
-
+<form method="POST" action='checkbox'>
 <div class="container">
   <div class="row">
     <div class= "col-lg">
-      <h3>IT Inventory(Valid Items)</h3>
+      
+      <h3>Create Asset Lable</h3>
       <div class="table-responsive">         
         <table class="mystyle table table-condensed">
           <tr>
-            <th>Edit</th>
+            <th>Select</th>
             {% for item in col %}
             <th>{{item}}</th>
             {% endfor %}
@@ -29,7 +30,7 @@
             {% for row in assets %}
           <tr>
                 <td>
-                  <a class="btn btn-info btn-sm" href="{{ url_for('edit_info', code=row[0]) }}">Edit</a>
+                  <input type="checkbox" value="{{row[0]}}" name="selected">
                 </td>
               {% for item in row %}
                 <td>{{ item }}</td>
@@ -38,15 +39,15 @@
           {% endfor %}
         </table>
       </div>
+      <input type="submit" value="Create Lables">
       <p class="space-above">
         <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('checkbox') }}" role="button">Create Labels</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('raw_edit') }}" role="button">Show Raw data</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
       </p>
       </div>
   </div>
 </div>
-
+</form>
 {% endblock %}
