--- a/templates/checkbox_auto_css.html
+++ b/templates/checkbox_auto_css.html
@@ -1,20 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- {% extends 'bootstrap/base.html' %} -->
 
-<head>
-  <meta charset="utf-8">
-  <title>Asset list</title>
+{% block title %}IT Assets{% endblock %}
+
+{% block styles %}
+
+{{super()}}
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
-<link rel="icon" type="image/x-icon" href="static/favicon.ico">
-</head>
+<!-- Favicon-->
+<link rel="icon" type="image/x-icon" href="static/favicon.ico" />
+{% endblock %}
 
-<body>
-  <h3 class="space">IT Inventory(Valid Items)</h3> 
+
+{% block content %}
+<form method="POST" action='checkbox'>
 <div class="container">
+  <div class="row">
+    <div class= "col-lg">
+      
+      <h3>Create Asset Lable</h3>
+      <div class="table-responsive"> 
         <table class="mystyle">
           <tr>
-            <th>Edit</th>
+            <th>Select</th>
             {% for item in col %}
             <th>{{item}}</th>
             {% endfor %}
@@ -22,7 +30,7 @@
             {% for row in assets %}
           <tr>
                 <td>
-                  <a class="button" href="{{ url_for('edit_info', code=row[0]) }}" role="button">Edit</a>
+                  <input type="checkbox" value="{{row[0]}}" name="selected">
                 </td>
               {% for item in row %}
                 <td>{{ item }}</td>
@@ -30,12 +38,16 @@
           </tr>
           {% endfor %}
         </table>
-      </div>
-      <p class="space">
+        </div>
+      <input type="submit" value="Create Lables">
+      <p class="space-above">
         <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('checkbox') }}" role="button">Create Labels</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('raw_edit') }}" role="button">Show Raw data</a>
         <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
       </p>
-</body>
+      </div>
+  </div>
+</div>
+</form>
+{% endblock %}
