--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,4 +1,4 @@
-<!-- {% extends 'bootstrap/base.html' %} -->
+{% extends 'bootstrap/base.html' %}
 
 {% import "bootstrap/wtf.html" as wtf %}
 
@@ -10,23 +10,19 @@
 
 <link rel="stylesheet"
       href="{{url_for('.static', filename='css/styles.css')}}">
+<link rel="icon" type="image/x-icon" href="static/favicon.ico">
 
 {% endblock %}
 
 {% block content %}
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8">
 
       <h3>Edit the asset information</h3>
       {{ wtf.quick_form(form, novalidate=True) }}
-      
+
+</div>
   <p class="space-above">
     <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
   </p>
-
-    </div>
-  </div>
-</div>
 
 {% endblock %}
