--- a/templates/error.html
+++ b/templates/error.html
@@ -1,32 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- {% extends 'bootstrap/base.html' %} -->
+<head>
+  <meta charset="utf-8">
+  <title>CheckBox for the Labels</title>
 
-{% block title %}Error page{% endblock %}
+<link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
+<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+</head>
 
-{% block styles %}
-
-<!-- {{super()}} -->
-
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='css/styles.css')}}">
-
-{% endblock %}
-
-{% block content %}
+<body>
 <div class="container">
-  <div class="row">
-    <div class="col-sm-12 col-md-8">
       <p class="space-above">
       <h2>UserID Error </h2>
       <h3>UserID {{userinfo}} is not in the User Database </h3>
       <h3>Please Check and Try again </h3>
       </p>
-      <p class="space-above">
-      <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
-      </p>
-
-    </div>
-  </div>
 </div>
-
-{% endblock %}
+<p class="space">
+  <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+</p>
+</body>
