--- a/templates/pdtable.html
+++ b/templates/pdtable.html
@@ -1,36 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- {% extends 'bootstrap/base.html' %} -->
-{% block title %}IT Assets pandas table{% endblock %}
+<head>
+  <meta charset="utf-8">
+  <title>Pandas Table</title>
 
-{% block styles %}
+<link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
+<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+</head>
 
-<!-- {{super()}} -->
 
-<link rel="stylesheet"
-    href="{{url_for('.static', filename='css/styles.css')}}"> 
-
-{% endblock %}
-
-{% block content %}
-
-<div class="container">
-    <div class="row">
-    <div class= "col-lg">
-        <h1>All Asset</h1>
-        <div class="table-responsive"> 
-            <table class="table table-condensed">         
-            {% for table in tables %}
-                {{titles[loop.index]}}
-                {{ table|safe }}
-            {% endfor %}
-            </table>
-        </div>
-        <p class="space-above">
-            <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-            <a class="btn btn-warning btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download(Raw)</a>
-        </p>
-        </div>
-    </div>
+<body>
+    <h1 class="space">All Asset</h1>
+<div class="container">      
+    <table>         
+    {% for table in tables %}
+        {{titles[loop.index]}}
+        {{ table|safe }}
+    {% endfor %}
+    </table>
 </div>
 
-{% endblock %}
+<p class="space">
+    <a class="btn btn-warning btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+    <a class="btn btn-warning btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download(Raw)</a>
+</p>
+</body>
