--- a/templates/rawedit.html
+++ b/templates/rawedit.html
@@ -1,54 +1,45 @@
-{% extends 'bootstrap/base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block title %}IT Assets{% endblock %}
+<head>
+  <meta charset="utf-8">
+  <title>Edit or Delete the data</title>
 
-{% block styles %}
-
-{{super()}}
-
-<link rel="stylesheet"
-      href="{{url_for('.static', filename='css/styles.css')}}"> 
-
-{% endblock %}
+<link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
+<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+</head>
 
 
-{% block content %}
-
+<body>
+  <h3 class="space">All Inventory Records</h3>
 <div class="container">
-  <div class="row">
-    <div class= "col-lg">
-      <h3>All Inventory Records</h3>
-      <div class="table-responsive">          
-        <table class="mystyle table table-condensed">
-          <tr>
-            <th>Edit</th>
-            <th>Delete</th>
-            {% for item in col %}
-            <th>{{item}}</th>
-            {% endfor %}
-          </tr>
-            {% for row in assets %}
-          <tr>
-                <td>
-                  <a class="btn btn-info btn-sm" href="{{ url_for('edit_info', code=row[0]) }}">Edit</a>
-                </td>
-                <td>
-                  <a class="btn btn-danger btn-sm" href="{{ url_for('delete_item', code=row[0]) }}">Del</a>
-                </td>
-              {% for item in row %}
-                <td>{{ item }}</td>
-              {% endfor %}
-          </tr>
-          {% endfor %}
-        </table>
-      </div>
-      <p class="space-above">
-        <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
-      </p>
-      </div>
-  </div>
+  <table class="mystyle table table-condensed">
+    <tr>
+      <th>Edit</th>
+      <th>Delete</th>
+      {% for item in col %}
+      <th>{{item}}</th>
+      {% endfor %}
+    </tr>
+      {% for row in assets %}
+    <tr>
+          <td>
+            <a class="button" href="{{ url_for('edit_info', code=row[0]) }}">Edit</a>
+          </td>
+          <td>
+            <a class="button2" href="{{ url_for('delete_item', code=row[0]) }}">Del</a>
+          </td>
+        {% for item in row %}
+          <td>{{ item }}</td>
+        {% endfor %}
+    </tr>
+    {% endfor %}
+  </table>
 </div>
+<p class="space">
+  <a class="btn btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+  <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
+  <a class="btn btn-link btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
+</p>
 
-{% endblock %}
+</body>
