--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -129,7 +129,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background: rgb(40, 113, 215);
+  background: gold;
   cursor: pointer;
 }
 
