--- a/templates/add.html
+++ b/templates/add.html
@@ -10,8 +10,7 @@
 
 <link rel="stylesheet"
       href="{{url_for('.static', filename='css/styles.css')}}">
-<link rel="icon" type="image/x-icon" href="static/favicon.ico">
-
+<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 {% endblock %}
 
 {% block content %}
