--- a/templates/checkbox.html
+++ b/templates/checkbox.html
@@ -6,7 +6,7 @@
   <title>CheckBox for the Labels</title>
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
-<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         </table>
       </div>
       <p class="space">
-      <input type="submit" value="Create Lables">
+      <input type="submit" value="Create & Download Lables">
       </p>
       <p class="space-above">
         <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
