--- a/templates/edit.html
+++ b/templates/edit.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet"
       href="{{url_for('.static', filename='css/styles.css')}}">
-<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 
 {% endblock %}
 
