--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
   <title>CheckBox for the Labels</title>
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
-<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 
 </head>
 <div class="container">
-<img src="../static/logo.png" width=25%></img>
+<img src="../static/img/logo.pnn" width=25%></img>
 </div>
 
 <body>
