--- a/templates/pdtable.html
+++ b/templates/pdtable.html
@@ -6,7 +6,7 @@
   <title>Pandas Table</title>
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
-<link rel="icon" type="image/x-icon" href="static/favicon.ico">
+<link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 </head>
 
 
