--- a/templates/error.html
+++ b/templates/error.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CheckBox for the Labels</title>
+  <title>UserID Error Page</title>
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
 <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
