--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <title>CheckBox for the Labels</title>
+  <title>Home</title>
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
 <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
 
 </head>
-<div class="container">
-<img src="../static/img/logo.pnn" width=25%></img>
+<div class="container-center">
+<img src="../static/img/logo.png" width=20%></img>
 </div>
 
 <body>
