--- a/templates/error.html
+++ b/templates/error.html
@@ -18,6 +18,7 @@
       </p>
 </div>
 <p class="space">
-  <a class="btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+  <a class="btn btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+  <a class="btn btn-link btn-lg" href="{{ url_for('userlist') }}" role="button">See the User List</a>
 </p>
 </body>
