--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
     <a class="button button-lg" href="{{ url_for('showlist') }}" role="button">Show the List</a>
     <!-- <a class="btn-info btn-lg" href="{{ url_for('pdtable') }}" role="button">Table Raw List</a> -->
     <a class="button button-lg" href="{{ url_for('add_info') }}" role="button">Add Items</a>
+    <a class="button button-lg" href="{{ url_for('userlist') }}" role="button">User List</a>
   </div>
   </div>
 </body>
