--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Edit or Delete the data</title>
+  <title>User list</title>
 
 <link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
 <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
@@ -11,7 +11,7 @@
 
 
 <body>
-  <h3 class="space">All Inventory Records</h3>
+  <h3 class="space">User information</h3>
 <div class="container">
   <table class="mystyle table table-condensed">
     <tr>
