Add backup folder clean up function

--- a/templates/rawedit.html
+++ b/templates/rawedit.html
@@ -40,6 +40,7 @@
   <a class="btn btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
   <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
   <a class="btn btn-link btn-lg" href="{{ url_for('downloadFile') }}" role="button">Download</a>
+  <a class="btn btn-link btn-lg" href="{{ url_for('clean') }}" role="button">Empty Backup folder</a>
 </p>
 
 </body>
