--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -31,7 +31,7 @@ a {
 }
 
 .button-lg{
-  border-radius: 50%;
+  border-radius: 20%;
   font-size: large;
 }
 
@@ -105,15 +105,11 @@ a {
 
 .mystyle th {
   background-color:  rgb(40, 113, 215);
-  min-width: 100px;
   color: aliceblue;
-  text-align: center;
 }
 
 .mystyle tr {
-  width: auto;
   height: 40px;
-  text-align: center;
 }
 
 .mystyle tr:nth-child(even) {
@@ -123,6 +119,12 @@ a {
 .mystyle tr:hover {
   background: rgb(63, 190, 220);
   cursor: pointer;
+}
+
+.mystyle td {
+  padding: 5px 30px;
+  text-align: left;
+  min-width: 30px;
 }
 
 
