--- a/templates/adduser.html
+++ b/templates/adduser.html
@@ -17,7 +17,9 @@
 <div class="container">
       <h3>Add a new User into the database</h3>
       <!-- This is where your WTForm will go -->
+      <p class="space">
       {{ wtf.quick_form(form, novalidate=True) }}
+      </p> 
 </div>
 
 
