--- a/templates/add.html
+++ b/templates/add.html
@@ -2,7 +2,7 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Edit{% endblock %}
+{% block title %}Add items{% endblock %}
 
 {% block styles %}
 
@@ -14,15 +14,14 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container1">
+      <a class="btn btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+      <a class="btn btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
       <h3>Add new asset into the database</h3>
+</div>
+      <div class="container">
       <!-- This is where your WTForm will go -->
       {{ wtf.quick_form(form, novalidate=True) }}
-</div>
-
-<p class="space">
-      <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-      <a class="btn btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
-</p>
+      </div>
 
 {% endblock %}
