--- a/templates/assets.html
+++ b/templates/assets.html
@@ -1,17 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'bootstrap/base.html' %}
 
-<head>
-  <meta charset="utf-8">
-  <title>Asset list</title>
+{% import "bootstrap/wtf.html" as wtf %}
 
-<link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
+{% block title %}Asset List{% endblock %}
+
+{% block styles %}
+
+{{super()}}
+
+<link rel="stylesheet"
+      href="{{url_for('.static', filename='css/styles.css')}}">
 <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
-</head>
+{% endblock %}
 
-<body>
-  <h3 class="space">IT Inventory(Valid Items)</h3> 
-<div class="container">
+{% block content %}
+  <div class="container1">
+    {% if current_user.id == 'admin': %}
+      <a class="btn btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+      <a class="btn btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
+      <a class="btn btn-lg" href="{{ url_for('checkbox') }}" role="button">Create Labels</a>
+      <a class="btn btn-lg" href="{{ url_for('raw_edit') }}" role="button">Show Raw data</a>
+      <a class="btn btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
+    {% else: %}
+      <a class="btn btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+      <a class="btn btn-lg" href="{{ url_for('checkbox') }}" role="button">Create Labels</a>
+      <a class="btn btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
+    {% endif %}   
+    <h3 class="space">IT Inventory (Valid Items)</h3> 
+  </div>
+  <div class="container">
         <table class="mystyle">
           <tr>
             {% if current_user.id == 'admin': %}
@@ -35,17 +52,5 @@
           {% endfor %}
         </table>
       </div>
-      <p class="space">
-        {% if current_user.id == 'admin': %}
-          <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-          <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
-          <a class="btn btn-link btn-lg" href="{{ url_for('checkbox') }}" role="button">Create Labels</a>
-          <a class="btn btn-link btn-lg" href="{{ url_for('raw_edit') }}" role="button">Show Raw data</a>
-          <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
-        {% else: %}
-          <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-          <a class="btn btn-link btn-lg" href="{{ url_for('checkbox') }}" role="button">Create Labels</a>
-          <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
-        {% endif %}   
-      </p>
-</body>
+
+{% endblock %}
