--- a/templates/checkbox.html
+++ b/templates/checkbox.html
@@ -1,47 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'bootstrap/base.html' %}
 
-<head>
-  <meta charset="utf-8">
-  <title>CheckBox for the Labels</title>
+{% import "bootstrap/wtf.html" as wtf %}
 
-<link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
+{% block title %}Create Lables{% endblock %}
+
+{% block styles %}
+
+{{super()}}
+
+<link rel="stylesheet"
+      href="{{url_for('.static', filename='css/styles.css')}}">
 <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
-</head>
+{% endblock %}
 
-<body>
+{% block content %}
 <form method="POST" action='checkbox'>
-<div class="container">
-  <h3 class="space">Create Asset Lable</h3>
-    <div class="container">       
-      <table class="mystyle">
-        <tr>
-            <th>Select</th>
-            {% for item in col %}
-            <th>{{item}}</th>
-            {% endfor %}
-          </tr>
-            {% for row in assets %}
-          <tr>
-                <td>
-                  <input type="checkbox" value="{{row[0]}}" name="selected">
-                </td>
-              {% for item in row %}
-                <td>{{ item }}</td>
-              {% endfor %}
-          </tr>
+  <div class="container1">
+    <a class="btn btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+    <a class="btn btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+    <h3 class="space">Create Asset Lable</h3>    
+  </div>
+
+  <div class="container"> 
+    <table class="mystyle">
+      <tr>
+          <th>Select</th>
+          {% for item in col %}
+          <th>{{item}}</th>
           {% endfor %}
-        </table>
-      </div>
-      <p class="space">
-      <input type="submit" value="Create & Download Lables">
-      </p>
-      <p class="space-above">
-        <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('add_info') }}" role="button">Add an Item</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('raw_edit') }}" role="button">Show Raw data</a>
-        <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a>
-      </p>
-</div>
+        </tr>
+          {% for row in assets %}
+        <tr>
+              <td>
+                <input type="checkbox" value="{{row[0]}}" name="selected">
+              </td>
+            {% for item in row %}
+              <td>{{ item }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+      </table>
+  </div>
+    <p class="space">
+    <input type="submit" value="Create & Download Lables">
+    </p>
 </form>
-</body>
+{% endblock %}
