--- a/templates/error.html
+++ b/templates/error.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container1">
       <p class="space-above">
       <h2>UserID Error </h2>
       <h3>UserID {{userinfo}} is not in the User Database </h3>
@@ -18,7 +18,7 @@
       </p>
 </div>
 <p class="space">
-  <a class="btn btn-link btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
-  <a class="btn btn-link btn-lg" href="{{ url_for('userlist') }}" role="button">See the User List</a>
+  <a class="btn btn-lg" href="{{ url_for('showlist') }}" role="button">Back to the List</a>
+  <a class="btn btn-lg" href="{{ url_for('userlist') }}" role="button">See the User List</a>
 </p>
 </body>
