--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Edit{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block styles %}
 
@@ -15,18 +15,18 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container1">
+    <a class="btn btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
         {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-                <p>{{ message }}</p>
-            {% endfor %}
-        {% endif %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="container warning"> {{ message }}</p>
+                {% endfor %}
+            {% endif %}
         {% endwith %}
-        
+</div>    
+    <div class="container"> 
         {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-</div>
-<p class="space">
-    <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-</p>
+    </div>
+
 {% endblock %}
