--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -1,18 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'bootstrap/base.html' %}
 
-<head>
-  <meta charset="utf-8">
-  <title>User list</title>
+{% import "bootstrap/wtf.html" as wtf %}
 
-<link href="{{url_for('.static', filename='css/styles.css')}}" rel="stylesheet"> 
+{% block title %}User list{% endblock %}
+
+{% block styles %}
+
+{{super()}}
+
+<link rel="stylesheet"
+      href="{{url_for('.static', filename='css/styles.css')}}">
 <link rel="icon" type="image/x-icon" href="static/img/favicon.ico">
-</head>
+{% endblock %}
 
-
-<body>
+{% block content %}
+  <div class="container1">
+    <a class="btn btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
+    <a class="btn btn-lg" href="{{ url_for('add_user') }}" role="button">Add a new User</a>
+    <a class="btn btn-lg" href="{{ url_for('userdown') }}" role="button">Download</a>
+    <!-- <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a> -->
   <h3 class="space">User information</h3>
-  
   {% with messages = get_flashed_messages() %}
   {% if messages %}
         {% for message in messages %}
@@ -20,6 +27,7 @@
         {% endfor %}
   {% endif %}
   {% endwith %}
+</div>
 
 <div class="container">
   <table class="mystyle table table-condensed">
@@ -45,10 +53,5 @@
     {% endfor %}
   </table>
 </div>
-<p class="space">
-  <a class="btn btn-link btn-lg" href="{{ url_for('home') }}" role="button">Return to Main</a>
-  <a class="btn btn-link btn-lg" href="{{ url_for('add_user') }}" role="button">Add a new User</a>
-  <!-- <a class="btn btn-link btn-lg" href="{{ url_for('valid_only') }}" role="button">Download</a> -->
-</p>
 
-</body>
+{% endblock %}
